Add configuration file templates in various formats (INI, YAML, TOML, JSON, JSON5, Properties) and implement basic structure for config file handling Add Expression Engine for parsing basic logic/math expressions with variable support and functions
Signed-off-by: HappyBavarian07 <quirin.hosse@hosse.de>